Fixing small bugs

--- a/wedding-site-project/single-page-index.html
+++ b/wedding-site-project/single-page-index.html
@@ -167,7 +167,7 @@
                         Fun</h1>
                 </div>
 
-                <div class="two-columns">
+                <div class="two-columns coming-soon">
                     <div class="left-column">
                         <div id="what-to-bring" class="top-left">
                             <h2>What to Bring</h2>
@@ -485,8 +485,7 @@
             
             <div id="mcs" class="container padding-top-1em">
                 <h1 class="section-title section-title-white padding-top-1em">Masters of the Ceremony</h1>
-                <div class="bio-display mc-container">
-                </div>
+                <div class="mc-container"></div>
             </div>
         </section>
         <!-- END WEDDING PARTIES SECTION -->
@@ -516,11 +515,13 @@
         <!-- BEGIN RSVP SECTION -->
         <section id="rsvp-contact" class="bg-color pattern">
             <div class="divider-top-2 no-padding-bottom no-padding-top"></div>
+            
             <div id="rsvp" class="container">
                 <h1 class="section-title section-title-white padding-top-1em">RSVP</h1>
+                <div class="coming-soon"></div>
                 <br> <br> <br> <br> <br> <br> <br> <br>
             </div>
-            <div id="contact" class="container">
+            <div id="contact" class="container coming-soon">
                 <h1 class="section-title section-title-white padding-top-1em">Contact Us</h1>
                 <br> <br> <br> <br> <br> <br> <br> <br>
             </div>
