--- a/wedding-site-project/single-page-index.html
+++ b/wedding-site-project/single-page-index.html
@@ -459,8 +459,10 @@
         <section id="accommodations" class="">
             <div class="container">
                 <h1 class="section-title padding-top-1em">Accommodations</h1>
-                <img src="resources/images/camp-cody/cabins-3-1920x533.jpg">
+                <img src="resources/images/camp-cody/cabins-3-1920x533.jpg" style="margin-bottom: 80px">
             </div>
+            
+            <div class="container-fluid coming-soon"></div>
         </section>
         <!-- END ACCOMMODATIONS SECTION -->
 
